[package]
name = "winbear"
version = "0.1.0"
authors = ["Michael Bikovitsky <biko@bikodbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.10.0"

static_assertions = "1.1.0"
lazy_static = "1.4.0"
