[package]
name = "winbear"
version = "0.1.0"
authors = ["Michael Bikovitsky <biko@bikodbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.10.0"

static_assertions = "1.1.0"
widestring = "0.4.3"
json = "0.12.4"
chrono = "0.4"
clap = "2.33.3"
