[package]
name = "winbear"
version = "0.1.0"
authors = ["Michael Bikovitsky <biko@bikodbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.10.0"

citnames = { path = "citnames" }
util = { path = "util" }

static_assertions = "1.1.0"
clap = "2.33.3"

[workspace]
