[package]
name = "citnames"
version = "0.1.0"
authors = ["Michael Bikovitsky <biko@bikodbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

itertools = "0.10.0"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
mockall = "0.9.1"
